--- a/data/style.css
+++ b/data/style.css
@@ -51,6 +51,7 @@
     margin-top: 6px;
     margin-right: -6px;
     margin-left: -4px;
+    pointer-events: none;
 }
 .prude-firefox-addon-control .message-bubble {
     padding-left: 10px;
@@ -89,13 +90,13 @@
     display: block;
 }
 .prude-firefox-addon-control .count-bubble:hover ~ .help-text:after {
-    content: "show";
+    content: "show most recent";
 }
 .prude-firefox-addon-control .message-bubble:hover ~ .help-text:after {
-    content: "clear";
+    content: "clear all";
 }
 .prude-firefox-addon-control .toggle-bubble:hover ~ .help-text:after {
-    content: "toggle";
+    content: "toggle blocker";
 }
 .prude-firefox-addon-control.hidemessage .count-bubble,
 .prude-firefox-addon-control.hidemessage .message-bubble-arrow, 
